styles/modal.less
@modal-padding: @component-padding/2 @component-padding/1.5;

atom-panel.modal {
  width: @font-size * 40;
  margin-left: @font-size * -20;
  color: @text-color;
  background-color: transparent;
  padding: @component-padding;

  atom-text-editor[mini] {
    margin-bottom: @component-padding;
  }

  .select-list ol.list-group,
  &.select-list ol.list-group {
    border: 1px solid @overlay-border-color;
    background-color: lighten(@overlay-background-color, 2%);

    &:empty {
      border: none;
      margin-top: 0;
    }

    li {
      padding: @modal-padding;
      border-bottom: 1px solid @overlay-border-color;

      &:last-of-type {
        border-bottom: none;
      }

      .status.icon {
        float: right;
        margin-left: @component-icon-padding;
        &:before {
          margin-right: 0;
        }
      }
    }
  }

  .select-list .key-binding {
    margin-top: -1px;
    margin-left: @component-padding/2;
    margin-right: calc( -@component-padding/3 ~"+" 1px);
  }

  & > * {
    position: relative; // fixes stacking order
  }


  // Container
  &:before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 0;
    background-color: @overlay-background-color;
    border-top: 1px solid hsla(0,0%,0%,.2);
    border-radius: 0 0 @component-border-radius*2 @component-border-radius*2;
    box-shadow: 0 6px 12px -2px hsla(0,0%,0%,.4);
  }

  // Backdrop
  // TODO: Add extra wrapper to translate individually or easier positioning

  &:after {
    content: "";
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: -1;
    background: @overlay-backdrop-color;
    -webkit-animation: overlay-fade .1s cubic-bezier(0.215, 0.61, 0.355, 1);
  }

  @-webkit-keyframes overlay-fade {
    0% { opacity: 0; }
    100% { opacity: 1; }
  }

}

